fix static instances error on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -370,8 +370,8 @@ body {
     padding: 0.5rem 4.5rem;
 }
 .allbtnsdiv {
+    display: none;
     grid-area: 1 / 1 / 9 / 13;
-    display: grid;
     grid-template-columns: 1fr 0.3fr 4.6fr 0.3fr 1fr;
     grid-template-rows: 1fr 4fr 1fr;
     margin: 0;
@@ -382,7 +382,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 5rem;
-    color: rgba(2, 191, 15, 0.5);
+    color: rgba(255, 173, 173, 0.4);
     margin: 0;
     z-index: 1;
 }
@@ -508,3 +508,46 @@ body {
 #spacePg {
     display: none;
 }
+/* @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+    #outPg {
+      transform: rotate(+90deg);
+      transform-origin: right top;
+      width: 100vh;
+      height: 100vw;
+      overflow-x: hidden;
+      position: absolute;
+      top: 100%;
+      right: 0;
+    }
+    .allbtnsdiv {
+        display: grid;
+    }
+    .popupdiv > h2, .popupdiv > div > h3, .ppuprsdiv, .spcinfo, .spcpp {
+        font-size: 1rem;
+    }
+    .st {
+        font-size: 1.65rem;
+    }
+  }
+  @media screen and (min-height: 320px) and (max-height: 767px) and (orientation: landscape) {
+    #homePg {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: 100vh;
+      height: 100vw;
+      overflow-y: hidden;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+    .allbtnsdiv {
+        display: grid;
+    }
+    .popupdiv > h2, .popupdiv > div > h3, .ppuprsdiv, .spcinfo, .spcpp, .st {
+        font-size: 1rem;
+    }
+    .st {
+        font-size: 1.65rem;
+    }
+  } */
+
